# Kursovaya_rabota

./: README.md  class_operation.py  main.py  pyproject.toml  utils.py
tests/: test_funcs.py  test_utils.py
