[tool.poetry]
name = "kursovaya-project"
version = "0.1.0"
description = ""
authors = ["Sergey Petrov <sev2316@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyproject-toml = "^0.0.10"


[tool.poetry.group.develop.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
